fix: min-height

--- a/ui/src/components/JsonApiViewer.sass
+++ b/ui/src/components/JsonApiViewer.sass
@@ -4,7 +4,7 @@
 
   &__list
     max-height: 600px
-    min-height: 600px
+    // min-height: 600px
 
     &-item
       border-top: 1px solid lightblue !important
