--- a/ui/src/css/JsonApiViewer.sass
+++ b/ui/src/css/JsonApiViewer.sass
@@ -26,10 +26,12 @@
       padding-bottom: 5px
 
     &--label
+      font-family: Avenir,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif
       font-size: 0.75rem
-      font-weight: 400
+      font-weight: 300
       line-height: 1.25rem
       letter-spacing: 0.03333em
+      color: #9e9e9e
 
     &--value
       font-weight: 400
