--- a/ui/src/index.sass
+++ b/ui/src/index.sass
@@ -1,3 +1,3 @@
-@import './components/JsonApiViewer.sass'
-@import '@quasar/quasar-ui-qmarkdown/src/index.sass'
-@import '@quasar/quasar-ui-qribbon/src/index.sass'
+@import 'quasar/src/css/variables.sass'
+@import './css/JsonApiViewer.sass'
+@import './css/prism-theme.sass'
