feat(css): for title

--- a/ui/src/css/JsonApiViewer.sass
+++ b/ui/src/css/JsonApiViewer.sass
@@ -4,6 +4,10 @@
   &__container
     max-height: 600px
 
+  &__title
+    font-weight: 500
+    font-size: 1.4em
+
   &__list
     max-height: 600px
 
